# text-correction-benchmarks

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/test/sec/whitespace.high-high/predictions/: bytes_bpe_8192.beam_5.txt  bytes_bpe_8192.greedy.txt
benchmarks/test/wsc/: runtime.txt
benchmarks/test/wsc/ACL/predictions/: bid+.txt  ed_large_v1.txt  ed_medium_v1.txt  eo_byt5_small.txt  eo_huge_byte_v2.txt  eo_large_byte_v2.txt  eo_large_char_v2.txt  eo_large_v1.txt  eo_medium_byte_v2.txt  eo_medium_char_v2.txt  eo_medium_v1.txt  the-one.txt  wordsegment.txt
benchmarks/test/wsc/Wiki.typos.no_spaces/predictions/: bid+.txt  dummy.txt  ed_large_v1.txt  ed_medium_v1.txt  eo_byt5_small.txt  eo_huge_byte_v2.txt  eo_large_byte_v2.txt  eo_large_char_v2.txt  eo_large_v1.txt  eo_medium_byte_v2.txt  eo_medium_char_v2.txt  eo_medium_v1.txt
benchmarks/test/wsc/Wiki.typos/predictions/: bid+.txt  dummy.txt  ed_large_v1.txt  ed_medium_v1.txt  eo_byt5_small.txt  eo_huge_byte_v2.txt  eo_large_byte_v2.txt  eo_large_char_v2.txt  eo_large_v1.txt  eo_medium_byte_v2.txt  eo_medium_char_v2.txt  eo_medium_v1.txt  the-one.txt  wordsegment.txt
benchmarks/test/wsc/Wiki/predictions/: bid+.txt  dummy.txt  ed_large_v1.txt  ed_medium_v1.txt  eo_byt5_small.txt  eo_huge_byte_v2.txt  eo_large_byte_v2.txt  eo_large_char_v2.txt  eo_large_v1.txt  eo_medium_byte_v2.txt  (+4 more)
scripts/: tokenize_with_spacy.py
src/text_correction_benchmarks/baselines/: __init__.py  general.py  seds.py  sedw.py  wsc.py
src/text_correction_benchmarks/cli/: download.py  evaluate.py
(+34 files in other folders)
