[project]
name = "text_correction_benchmarks"
version = "0.1.2"
description = "Benchmarks and evaluation tools for text correction tasks"
authors = [
    { name = "Sebastian Walter", email = "swalter@cs.uni-freiburg.de" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"

keywords = ["nlp", "text", "correction", "benchmark"]

classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing",
    "Topic :: Utilities"
]

dependencies = [
    "text-correction-utils>=0.1.4",
    "requests>=2.0.0",
]

[project.optional-dependencies]
baselines = [
    "jamspell",
    "wordsegment"
]

[project.scripts]
"tcb.download" = "text_correction_benchmarks.cli.download:main"
"tcb.evaluate" = "text_correction_benchmarks.cli.evaluate:main"
"tcb.baseline" = "text_correction_benchmarks.baselines:main"

[project.urls]
Github = "https://github.com/ad-freiburg/text-correction-benchmarks"

[tool.distutils.bdist_wheel]
universal = true

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
